# MSc-Thesis-TUD---boomerang-correspondence

./: .gitignore  README.md
Thesis-Correspondence/: 2dCorrespondenceTo3d.cpp  2dCorrespondenceTo3d.h  CMakeLists.txt  Thesis-Correspondence.cpp  Thesis-Correspondence.h  border_vertex_extraction.cpp  border_vertex_extraction.h  drawShape.cpp  drawShape.h  evaluateCorrespondence.cpp  evaluateCorrespondence.h  file_utils.cpp  file_utils.h  geometry.cpp  geometry.h  intermediateShape.cpp  intermediateShape.h  parameterize.cpp  parameterize.h  parameterizeSurface.cpp  parameterizeSurface.h  pca.cpp  pca.h  random_files.cpp  sfml_utils.cpp  sfml_utils.h  splitMesh.cpp  splitMesh.h  stl_utils.cpp  stl_utils.h  uvMapCorrespondence.cpp  uvMapCorrespondence.h
Thesis-Correspondence/enc_temp_folder/57646803dcd71af6cb15aba94f01053/: Thesis-Correspondence.cpp
Thesis-Correspondence/enc_temp_folder/8ecbf41353c91d54ccb8accac92774/: stl_utils.cpp
Thesis-Correspondence/models/: Boomerang_09_decimate001.stl  Boomerang_09_decimate01.stl  Boomerang_11_decimate01.stl  Boomerang_12_decimate01.stl  Boomerang_13_decimate005.stl  Boomerang_13_decimate0085.stl  Boomerang_13_decimate01.stl  Boomerang_14_decimate01.stl  Boomerang_23_decimate01.stl  Boomerang_24_decimate01.stl  Deborah.stl  boomerang_15_decimate01.stl  boomerang_16_decimate01.stl  boomerang_17_decimate01.stl  boomerang_18_decimate01.stl  boomerang_19_decimate01.stl  boomerang_20_decimate01.stl  boomerang_21_decimate01.stl  boomerang_22_decimate01.stl  rotorI.stl  rotorII.stl  test1.stl
